[tool.poetry]
name = "bootlegmon"
version = "0.1.0"
description = ""
authors = ["CarlosCervante5 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.0.1"
replit = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
